<resources>
    <string name="app_name">Abhiyantran 2020</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bottom_nav_gallery">Gallery</string>
    <string name="bottom_nav_events">Events</string>
    <string name="bottom_nav_guest">Guests</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">Profile name</string>
    <string name="new_post">New Posts</string>
    <string name="welcome">Welcome to Abhiyantran</string>
    <string name="login_inst">Please enter your mobile number to receive a verification code.</string>
    <string name="login">Continue</string>
    <string name="title_profile">Profile</string>
    <string name="about_abhi">About Abhiyantran</string>
    <string name="title_about">About</string>
    <string name="reg_events">Registered Events</string>
    <string name="abhiyantran">Abhiyantran App</string>
    <string name="version">Version</string>
    <string name="about_app">The official android application for Abhiyantran 2020</string>
    <string name="third_party">Third Party Resources</string>
    <string name="about">About app</string>
    <string name="developers">Developers</string>
    <string name="sponsors">Sponsors</string>
    <string name="bottom_nav_home">Home</string>
    <string name="verify">Verify Your Number</string>
</resources>
