<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AboutActivity"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/about_app_bar"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/about_toolbar"
            android:elevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorAccent"
            app:title="@string/about">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_app_bar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/abhiyantran"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="150dp"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/grey"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.0.0"
            android:textColor="@color/white"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_party"
            android:textColor="@color/grey"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Firebase Firestore"
            android:textColor="@color/white"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>