<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/login_app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:tint="@color/green_66"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/abhi"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_app_logo" />

    <TextView
        android:id="@+id/login_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_inst"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/green_66"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="435dp" />

    <TextView
        android:id="@+id/login_inst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        android:layout_marginBottom="25dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/login_inst"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@color/grey"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="560dp" />

    <RelativeLayout
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:elevation="3dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/login_btn">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textSize="16sp"
            android:textColor="@color/white"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>