<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:titleTextColor="@color/colorAccent"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/app_logo"
                android:tint="@color/colorAccent"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:src="@drawable/abhi"
                android:scaleType="fitCenter"
                android:layout_gravity="center_vertical"
                android:tint="@color/colorAccent"/>

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/outline_notifications_black_48"
                android:tint="@color/colorAccent"
                android:scaleType="fitCenter"/>
            
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>


    <FrameLayout
        android:id="@+id/main_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/bottom_nav_bar">

        <RelativeLayout
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bottom_bar">

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:id="@+id/bottom_nav_events_new"
                    android:gravity="center_horizontal"
                    android:layout_height="?attr/actionBarSize">
                    <ImageView
                        android:id="@+id/bottom_nav_events_new_image"
                        android:layout_width="45dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp"
                        android:src="@drawable/outline_event_black_48"
                        android:tint="@color/white"
                        android:scaleType="fitCenter"/>
                    <TextView
                        android:id="@+id/bottom_nav_events_new_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bottom_nav_events"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textSize="10sp"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center_horizontal"
                    android:id="@+id/bottom_nav_gallery_new"
                    android:layout_height="?attr/actionBarSize">

                    <ImageView
                        android:id="@+id/bottom_nav_gallery_new_image"
                        android:layout_width="45dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp"
                        android:src="@drawable/outline_photo_library_black_48"
                        android:tint="@color/white"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/bottom_nav_gallery_new_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bottom_nav_gallery"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1"/>


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:id="@+id/bottom_nav_guests_new"
                    android:gravity="center_horizontal"
                    android:layout_height="?attr/actionBarSize">

                    <ImageView
                        android:id="@+id/bottom_nav_guest_new_image"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp"
                        android:src="@drawable/outline_people_black_48"
                        android:tint="@color/white"
                        android:scaleType="fitCenter"/>
                    <TextView
                        android:id="@+id/bottom_nav_guest_new_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bottom_nav_guest"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:id="@+id/bottom_nav_about_new"
                    android:gravity="center_horizontal"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/bottom_nav_about_new_image"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/outline_person_black_48"
                        android:tint="@color/white"
                        android:paddingTop="10dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp"
                        android:scaleType="fitCenter"/>
                    <TextView
                        android:id="@+id/bottom_nav_about_new_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_about"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:elevation="5dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_weight="1"
                android:id="@+id/bottom_nav_home_new"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/app_logo"
                android:tint="@color/colorAccent"/>

            <TextView
                android:id="@+id/bottom_nav_home_new_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bottom_nav_home"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>